--- a/index.html
+++ b/index.html
@@ -1,16 +1,124 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <title>Canvas tutorial</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VizHack</title>
+
+    <meta property="og:title" content="VizHack">
+    <meta property="og:description" content="თუ ხარ დიზაინერი, პროგრამისტი, კომუნიკაციის სპეციალისტი, ისტორიის მკვლევარი, ჟურნალისტი ან სტატისტიკოსი და გაინტერესებს მონაცემებთან მუშაობა, შემოუერთდი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში 1918! დარეგისტრირდით ჰაკათონზე და გუნდთან ერთად იმუშავეთ ისტორიულ მონაცემებზე, რომელიც მოიცავს 1918 წლიდან დღემდე პერიოდს. გააცოცხლე ისტორია თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!"/>
+    <meta name="description" content="თუ ხარ დიზაინერი, პროგრამისტი, კომუნიკაციის სპეციალისტი, ისტორიის მკვლევარი, ჟურნალისტი ან სტატისტიკოსი და გაინტერესებს მონაცემებთან მუშაობა, შემოუერთდი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში 1918! დარეგისტრირდით ჰაკათონზე და გუნდთან ერთად იმუშავეთ ისტორიულ მონაცემებზე, რომელიც მოიცავს 1918 წლიდან დღემდე პერიოდს. გააცოცხლე ისტორია თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://vizhack.ge/" />
+    <meta property="og:site_name" content="VizHack" />
+    <meta property="og:image" content="https://vizhack.ge/assets/images/share.png" />
+
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
+
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
+
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css?v=1.0" />
   </head>
   <body>
-    <div class="bg"></div>
     <canvas id="canvas">
       <img src="assets/images/logo.png" class="logo">
     </canvas>
+    <div class="app">
+      <div class="content">
+        <main>
+          <a class="vizhack2017" href="https://vizhack.ge/2017" data-fade-in-id="7">VIZHACK 2017</a>
+          <div class="source">ფოტოები: საქართველოს<br /> ეროვნული არქივი</div>
+          <h1 class="gradient" data-fade-in-id="1" data-draw="line"><b>9-10 ივნისი</b>  ტექნოპარკი</h1>
+          <div class="hline" data-hline-id="1"></div>
+          <div class="row">
+            <div>
+              <div class="vline" data-vline-id="1"></div>
+            </div>
+            <div class="flex">
+              <section data-fade-in-id="2">
+                <p>თუ ხარ დიზაინერი, პროგრამისტი, კომუნიკაციის სპეციალისტი, ისტორიის მკვლევარი, ჟურნალისტი ან სტატისტიკოსი და გაინტერესებს მონაცემებთან მუშაობა, შემოუერთდი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში 1918!
+                </p>
+                <p>
+                  9 და 10 ივნისს მოდით ტექნოპარკში თქვენს გუნდთან ერთად ან ადგილზევე შექმენით გუნდი და იმუშავეთ იმუშავეთ ისტორიულ მონაცემებზე, რომელიც მოიცავს 1918 წლიდან დღემდე პერიოდს. გამოსახე ისტორია
+                  თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!
+                </p>
+              </section>
+              <a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLSceHWlqzMKz3bwsh08E-jG9D_3okWnYSqWzMMpnyPbNXEupIw/viewform&sa=D&source=hangouts&ust=1523525767698000&usg=AFQjCNGkaeLG-YsuZgJx29GpK-znFRl5fg" class="register gradient" data-fade-in-id="3">დარეგისტრირდი</a>
+              <div class="subscribe" data-draw="line" data-fade-in-id="4">
+                <label>სიახლეების გამოწერა</label>
+
+
+                <!-- Begin MailChimp Signup Form -->
+                <div id="mc_embed_signup">
+                  <form action="https://twitter.us16.list-manage.com/subscribe/post?u=4c5461b661acbc0f12e0cc253&amp;id=ec174eaaa1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll">
+
+                    <ul class="subscribe-languages">
+                      <li>
+                        <input type="radio" value="Georgian" name="MMERGE2" id="mce-MMERGE2-0" checked="checked">
+                        <label for="mce-MMERGE2-0">GE</label>
+                    </li>
+                    <li class="line"></li>
+                    <li>
+                      <input type="radio" value="English" name="MMERGE2" id="mce-MMERGE2-1">
+                      <label for="mce-MMERGE2-1">EN</label>
+                    </li>
+                  </ul>
+                  <div class="subscribe-submit">
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="example@gmail.com">
+                    <div class="line"></div>
+                    <input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button">
+                  </div>
+
+
+                    <div id="mce-responses" class="clear">
+                      <div class="response" id="mce-error-response" style="display:none"></div>
+                      <div class="response" id="mce-success-response" style="display:none"></div>
+                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4c5461b661acbc0f12e0cc253_ec174eaaa1" tabindex="-1" value=""></div>
+                      </div>
+                  </form>
+                </div>
+
+                <!--End mc_embed_signup-->
+
+              </div>
+            </div>
+          </div>
+          <div class="hline" data-hline-id="2"></div>
+        </main>
+        <footer>
+          <ul data-fade-in-id="5">
+            <li>
+              <label>ორგანიზატორი</label>
+              <a href="https://forset.ge/en/" target="_blank" class="forset"><img src="assets/images/forset.svg" width="80" height="21"></a>
+            </li>
+            <li>
+              <label>პარტნიორი</label>
+              <a href="https://ge.usembassy.gov/" target="_blank"><img src="assets/images/us_embassy.png" width="76" height="76"></a>
+            </li>
+          </ul>
+          <a class="vizhack2017" href="https://vizhack.ge/2017" data-fade-in-id="6">VIZHACK 2017</a>
+        </footer>
+      </div>
+    </div>
+    <script src="https://unpkg.com/current-device/umd/current-device.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-100354106-9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-100354106-9');
+    </script>
+     -->
   </body>
 </html>
