Ready for first release

--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
     <div class="app">
       <div class="content">
         <main>
-          <a class="vizhack2017" href="https://vizhack.ge/2017" data-fade-in-id="7">VIZHACK 2017</a>
+          <div class="circle" data-id="1"></div>
+          <a class="vizhack2017 hidden" href="https://vizhack.ge/2017" data-id="2">VIZHACK 2017</a>
           <div class="source">ფოტოები: საქართველოს<br /> ეროვნული არქივი</div>
-          <h1 class="gradient" data-fade-in-id="1" data-draw="line"><b>9-10 ივნისი</b>  ტექნოპარკი</h1>
-          <div class="hline" data-hline-id="1"></div>
+          <h1 class="gradient hidden" data-id="3"><b>9-10 ივნისი</b>  ტექნოპარკი</h1>
+          <div class="hline" data-id="4"></div>
           <div class="row">
-            <div>
-              <div class="vline" data-vline-id="1"></div>
+            <div class="space">
+              <div class="vline" data-id="5"></div>
             </div>
             <div class="flex">
-              <section data-fade-in-id="2">
+              <section class="hidden" data-id="6">
                 <p>თუ ხარ დიზაინერი, პროგრამისტი, კომუნიკაციის სპეციალისტი, ისტორიის მკვლევარი, ჟურნალისტი ან სტატისტიკოსი და გაინტერესებს მონაცემებთან მუშაობა, შემოუერთდი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში 1918!
                 </p>
                 <p>
@@ -49,8 +50,8 @@
                   თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!
                 </p>
               </section>
-              <a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLSceHWlqzMKz3bwsh08E-jG9D_3okWnYSqWzMMpnyPbNXEupIw/viewform&sa=D&source=hangouts&ust=1523525767698000&usg=AFQjCNGkaeLG-YsuZgJx29GpK-znFRl5fg" class="register gradient" data-fade-in-id="3">დარეგისტრირდი</a>
-              <div class="subscribe" data-draw="line" data-fade-in-id="4">
+              <a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLSceHWlqzMKz3bwsh08E-jG9D_3okWnYSqWzMMpnyPbNXEupIw/viewform&sa=D&source=hangouts&ust=1523525767698000&usg=AFQjCNGkaeLG-YsuZgJx29GpK-znFRl5fg" class="register gradient hidden" data-id="7">დარეგისტრირდი</a>
+              <div class="subscribe hidden" data-id="8">
                 <label>სიახლეების გამოწერა</label>
 
 
@@ -59,21 +60,23 @@
                   <form action="https://twitter.us16.list-manage.com/subscribe/post?u=4c5461b661acbc0f12e0cc253&amp;id=ec174eaaa1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
 
+                  <div class="subscribe-row">
                     <ul class="subscribe-languages">
                       <li>
                         <input type="radio" value="Georgian" name="MMERGE2" id="mce-MMERGE2-0" checked="checked">
                         <label for="mce-MMERGE2-0">GE</label>
-                    </li>
-                    <li class="line"></li>
-                    <li>
-                      <input type="radio" value="English" name="MMERGE2" id="mce-MMERGE2-1">
-                      <label for="mce-MMERGE2-1">EN</label>
-                    </li>
-                  </ul>
-                  <div class="subscribe-submit">
-                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="example@gmail.com">
-                    <div class="line"></div>
-                    <input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button">
+                      </li>
+                      <li class="line"></li>
+                      <li>
+                        <input type="radio" value="English" name="MMERGE2" id="mce-MMERGE2-1">
+                        <label for="mce-MMERGE2-1">EN</label>
+                      </li>
+                    </ul>
+                    <div class="subscribe-submit">
+                      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="example@gmail.com">
+                      <div class="line"></div>
+                      <input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button">
+                    </div>
                   </div>
 
 
@@ -91,10 +94,10 @@
               </div>
             </div>
           </div>
-          <div class="hline" data-hline-id="2"></div>
+          <div class="hline" data-id="9"></div>
         </main>
         <footer>
-          <ul data-fade-in-id="5">
+          <ul class="hidden" data-id="10">
             <li>
               <label>ორგანიზატორი</label>
               <a href="https://forset.ge/en/" target="_blank" class="forset"><img src="assets/images/forset.svg" width="80" height="21"></a>
@@ -104,7 +107,7 @@
               <a href="https://ge.usembassy.gov/" target="_blank"><img src="assets/images/us_embassy.png" width="76" height="76"></a>
             </li>
           </ul>
-          <a class="vizhack2017" href="https://vizhack.ge/2017" data-fade-in-id="6">VIZHACK 2017</a>
+          <a class="vizhack2017 hidden" href="https://vizhack.ge/2017" data-id="11">VIZHACK 2017</a>
         </footer>
       </div>
     </div>
