Feedback fix round

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
       <div class="content">
         <main>
           <div class="circle" data-id="1"></div>
-          <a class="vizhack2017 hidden" href="https://vizhack.ge/2017" data-id="2">VIZHACK 2017</a>
           <div class="source">ფოტოები: საქართველოს<br /> ეროვნული არქივი</div>
-          <h1 class="gradient hidden" data-id="3"><b>9-10 ივნისი</b>  ტექნოპარკი</h1>
+          <h1 class="gradient hidden shift" data-id="3"><b>9-10 ივნისი</b>  ტექნოპარკი</h1>
+          <a class="vizhack2017 hidden" href="https://vizhack.ge/2017" data-id="2">VIZHACK 2017</a>
           <div class="hline" data-id="4"></div>
           <div class="row">
             <div class="space">
               <div class="vline" data-id="5"></div>
             </div>
             <div class="flex">
-              <section class="hidden" data-id="6">
+              <section class="hidden shift" data-id="6">
                 <p>თუ ხარ დიზაინერი, პროგრამისტი, კომუნიკაციის სპეციალისტი, ისტორიის მკვლევარი, ჟურნალისტი ან სტატისტიკოსი და გაინტერესებს მონაცემებთან მუშაობა, შემოუერთდი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში 1918!
                 </p>
                 <p>
@@ -51,7 +51,7 @@
                 </p>
               </section>
               <a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLSceHWlqzMKz3bwsh08E-jG9D_3okWnYSqWzMMpnyPbNXEupIw/viewform&sa=D&source=hangouts&ust=1523525767698000&usg=AFQjCNGkaeLG-YsuZgJx29GpK-znFRl5fg" class="register gradient hidden" data-id="7">დარეგისტრირდი</a>
-              <div class="subscribe hidden" data-id="8">
+              <div class="subscribe hidden shift" data-id="8">
                 <label>სიახლეების გამოწერა</label>
 
 
@@ -97,17 +97,17 @@
           <div class="hline" data-id="9"></div>
         </main>
         <footer>
-          <ul class="hidden" data-id="10">
+          <ul class="hidden shift" data-id="10">
             <li>
               <label>ორგანიზატორი</label>
               <a href="https://forset.ge/en/" target="_blank" class="forset"><img src="assets/images/forset.svg" width="80" height="21"></a>
             </li>
             <li>
               <label>პარტნიორი</label>
-              <a href="https://ge.usembassy.gov/" target="_blank"><img src="assets/images/us_embassy.png" width="76" height="76"></a>
+              <a href="https://ge.usembassy.gov/" target="_blank"><img src="assets/images/us_embassy.png" width="60" height="60"></a>
             </li>
           </ul>
-          <a class="vizhack2017 hidden" href="https://vizhack.ge/2017" data-id="11">VIZHACK 2017</a>
+          <a class="vizhack2017 hidden shift" href="https://vizhack.ge/2017" data-id="11">VIZHACK 2017</a>
         </footer>
       </div>
     </div>
