Feedback round before first release

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!
                 </p>
               </section>
-              <a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLSceHWlqzMKz3bwsh08E-jG9D_3okWnYSqWzMMpnyPbNXEupIw/viewform&sa=D&source=hangouts&ust=1523525767698000&usg=AFQjCNGkaeLG-YsuZgJx29GpK-znFRl5fg" class="register gradient hidden" data-id="7">დარეგისტრირდი</a>
+              <a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLSceHWlqzMKz3bwsh08E-jG9D_3okWnYSqWzMMpnyPbNXEupIw/viewform&sa=D&source=hangouts&ust=1523525767698000&usg=AFQjCNGkaeLG-YsuZgJx29GpK-znFRl5fg" class="register gradient hidden shift" data-id="7">დარეგისტრირდი</a>
               <div class="subscribe hidden shift" data-id="8">
                 <label>სიახლეების გამოწერა</label>
 
