--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="circle" data-id="1"></div>
           <div class="source">ფოტოები: საქართველოს<br /> ეროვნული არქივი</div>
           <h1 class="gradient hidden shift" data-id="3">უკან მომავალში: 1918</h1>
-          <a class="vizhack2017 hidden" href="https://vizhack.ge/2017/ka/" data-id="2" target="_blank">წინა <br />ღონისძიება</a>
+          <a class="vizhack2017 hidden" href="https://vizhack.ge/2017/ka/" data-id="2" target="_blank">წინა <br />გამოშვება</a>
           <div class="hline" data-id="4"></div>
           <div class="row">
             <div class="space">
