--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   თუ ხარ დიზაინერი, პროგრამისტი, კომუნიკაციის სპეციალისტი, ისტორიის მკვლევარი, ჟურნალისტი ან სტატისტიკოსი და გაინტერესებს მონაცემებთან მუშაობა, შემოუერთდი მონაცემთა ვიზუალიზაციის ჰაკათონს - <b>უკან მომავალში 1918!</b>
                 </p>
                 <p>
-                  დარეგისტრირდი ჰაკათონზე, <b>9-10 ივნისს</b> მოდი გუნდთან ერთად <b>ტექნოპარკში</b> და იმუშავე ისტორიულ მონაცემებზე, რომელიც მოიცავს 1918 წლიდან დღემდე პერიოდს. გააცოცხლე ისტორია თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!
+                  დარეგისტრირდი ჰაკათონზე 10 მაისამდე, შერჩეული გუნდები <b>9-10 ივნისს ტექნოპარკში</b> იმუშავებენ ისტორიულ მონაცემებზე, რომელიც მოიცავს 1918 წლიდან დღემდე პერიოდს. ერთად გავაცოცხლოთ ისტორია თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!
                 </p>
               </section>
               <a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLSceHWlqzMKz3bwsh08E-jG9D_3okWnYSqWzMMpnyPbNXEupIw/viewform&sa=D&source=hangouts&ust=1523525767698000&usg=AFQjCNGkaeLG-YsuZgJx29GpK-znFRl5fg" class="register gradient hidden shift" data-id="7">დარეგისტრირდი</a>
