Sovlab logo added

--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
               <label>პარტნიორი</label>
               <a href="https://ge.usembassy.gov/" target="_blank"><img src="assets/images/us_embassy.png" width="60" height="60"></a>
             </li>
+            <li>
+              <label>მხარდამჭერი</label>
+              <a href="http://www.sovlab.ge/ka" target="_blank" class="sovlab"><img src="assets/images/sovlab.svg" width="69" height="33"></a>
+            </li>
           </ul>
           <a class="vizhack2017 hidden shift" href="https://vizhack.ge/2017" data-id="11">VIZHACK 2017</a>
         </footer>
