Current device script hard coded and fixed

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </footer>
       </div>
     </div>
-    <script src="https://unpkg.com/current-device/umd/current-device.min.js"></script>
+    <script src="assets/js/current-device.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-100354106-9"></script>
