All done except font styling

--- a/en/index.html
+++ b/en/index.html
@@ -33,7 +33,10 @@
       <div class="content">
         <main>
           <div class="circle" data-id="1"></div>
-          <div class="source">Photos: <br />The National Archive of Georgia</div>
+          <div class="corner">
+            <div class="source">Photos: The National <br />Archive of Georgia</div>
+            <a class="language" href="../ka">ქართული</a>
+          </div>
           <h1 class="gradient hidden shift" data-id="3">Back to the Future: 1918</h1>
           <a class="vizhack2017 hidden" href="https://vizhack.ge/2017/ka/" data-id="2" target="_blank">Past <br />Edition</a>
           <div class="hline" data-id="4"></div>
