--- a/ka/index.html
+++ b/ka/index.html
@@ -33,7 +33,10 @@
       <div class="content">
         <main>
           <div class="circle" data-id="1"></div>
-          <div class="source">ფოტოები: საქართველოს<br /> ეროვნული არქივი</div>
+          <div class="corner">
+            <div class="source">ფოტოები: საქართველოს<br /> ეროვნული არქივი</div>
+            <a class="language" href="../en">ENGLISH</a>
+          </div>
           <h1 class="gradient hidden shift" data-id="3">უკან მომავალში: 1918</h1>
           <a class="vizhack2017 hidden" href="https://vizhack.ge/2017/ka/" data-id="2" target="_blank">წინა <br />გამოშვება</a>
           <div class="hline" data-id="4"></div>
@@ -115,7 +118,7 @@
         </footer>
       </div>
     </div>
-    <script src="https://unpkg.com/current-device/umd/current-device.min.js"></script>
+    <script src="../assets/js/current-device.min.js"></script>
     <script type="text/javascript" src="../assets/js/main.js"></script>
     <!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100354106-9"></script>
     <script>
