Fix based on feedback

--- a/en/index.html
+++ b/en/index.html
@@ -7,8 +7,8 @@
     <title>VizHack</title>
 
     <meta property="og:title" content="VizHack">
-    <meta property="og:description" content="If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the data visualization hackathon - Back to the Future: 1918. Registration is open until May 10th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on June 9-10 in Technopark. Let's bring history to life using technologies, data and design!"/>
-    <meta name="description" content="If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the data visualization hackathon - Back to the Future: 1918. Registration is open until May 10th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on June 9-10 in Technopark. Let's bring history to life using technologies, data and design!">
+    <meta property="og:description" content="If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the Data Visualization Hackathon - Back to the Future: 1918. Registration is open until May 10th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on June 9-10 in Technopark. Let's bring history to life using technologies, data and design!"/>
+    <meta name="description" content="If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the Data Visualization Hackathon - Back to the Future: 1918. Registration is open until May 10th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on June 9-10 in Technopark. Let's bring history to life using technologies, data and design!">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vizhack.ge/en/" />
     <meta property="og:site_name" content="VizHack" />
@@ -37,7 +37,7 @@
             <div class="source">Photos: The National <br />Archive of Georgia</div>
             <a class="language" href="../ka">ქართული</a>
           </div>
-          <h1 class="gradient hidden shift" data-id="3">Back to the Future: 1918</h1>
+          <h1 class="gradient hidden shift" data-id="3"><b>Back to the Future: 1918</b></h1>
           <a class="vizhack2017 hidden" href="https://vizhack.ge/2017/ka/" data-id="2" target="_blank">Past <br />Edition</a>
           <div class="hline" data-id="4"></div>
           <div class="row">
@@ -47,16 +47,16 @@
             <div class="flex">
               <section class="hidden shift" data-id="6">
                 <p>
-                  If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the data visualization hackathon - <b>Back to the Future: 1918.</b>
+                  If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the Data Visualization Hackathon - <b>Back to the Future: 1918.</b>
                 </p>
                 <p>
                   Registration is open until May 10th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on <b>June 9-10 in Technopark</b>.
                   Let's bring history to life using technologies, data and design!
                 </p>
               </section>
-              <a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLSceHWlqzMKz3bwsh08E-jG9D_3okWnYSqWzMMpnyPbNXEupIw/viewform&sa=D&source=hangouts&ust=1523525767698000&usg=AFQjCNGkaeLG-YsuZgJx29GpK-znFRl5fg" class="register gradient hidden shift" data-id="7">Register now</a>
+              <a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLSceHWlqzMKz3bwsh08E-jG9D_3okWnYSqWzMMpnyPbNXEupIw/viewform&sa=D&source=hangouts&ust=1523525767698000&usg=AFQjCNGkaeLG-YsuZgJx29GpK-znFRl5fg" class="register gradient hidden shift" data-id="7">REGISTER NOW</a>
               <div class="subscribe hidden shift" data-id="8">
-                <label>Sign up for our newsletter</label>
+                <label>SIGN UP FOR OUR NEWSLETTER</label>
 
 
                 <!-- Begin MailChimp Signup Form -->
@@ -65,17 +65,7 @@
                     <div id="mc_embed_signup_scroll">
 
                   <div class="subscribe-row">
-                    <ul class="subscribe-languages" style="display:none;">
-                      <li>
-                        <input type="radio" value="Georgian" name="MMERGE2" id="mce-MMERGE2-0" checked="checked">
-                        <label for="mce-MMERGE2-0">GE</label>
-                      </li>
-                      <li class="line"></li>
-                      <li>
-                        <input type="radio" value="English" name="MMERGE2" id="mce-MMERGE2-1">
-                        <label for="mce-MMERGE2-1">EN</label>
-                      </li>
-                    </ul>
+                    <input type="hidden" value="English" name="MMERGE2">
                     <div class="subscribe-submit">
                       <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="E-mail">
                       <div class="line"></div>
@@ -103,15 +93,15 @@
         <footer>
           <ul class="hidden shift" data-id="10">
             <li>
-              <label>Organizer</label>
+              <label>ORGANIZER</label>
               <a href="https://forset.ge/en/" target="_blank" class="forset"><img src="../assets/images/forset.svg" width="80" height="21"></a>
             </li>
             <li>
-              <label>Partner</label>
+              <label>PARTNER</label>
               <a href="https://ge.usembassy.gov/" target="_blank"><img src="../assets/images/us_embassy.png" width="60" height="60"></a>
             </li>
             <li>
-              <label>Supporter</label>
+              <label>SUPPORTER</label>
               <a href="http://www.sovlab.ge/en/" target="_blank" class="sovlab"><img src="../assets/images/sovlab.svg" width="69" height="33"></a>
             </li>
           </ul>
