--- a/ka/index.html
+++ b/ka/index.html
@@ -37,7 +37,7 @@
             <div class="source">ფოტოები: საქართველოს<br /> ეროვნული არქივი</div>
             <a class="language" href="../en">ENGLISH</a>
           </div>
-          <h1 class="gradient hidden shift" data-id="3">უკან მომავალში: 1918</h1>
+          <h1 class="gradient hidden shift" data-id="3"><b>უკან მომავალში: 1918</b></h1>
           <a class="vizhack2017 hidden" href="https://vizhack.ge/2017/ka/" data-id="2" target="_blank">წინა <br />გამოშვება</a>
           <div class="hline" data-id="4"></div>
           <div class="row">
@@ -64,17 +64,7 @@
                     <div id="mc_embed_signup_scroll">
 
                   <div class="subscribe-row">
-                    <ul class="subscribe-languages" style="display:none;">
-                      <li>
-                        <input type="radio" value="Georgian" name="MMERGE2" id="mce-MMERGE2-0" checked="checked">
-                        <label for="mce-MMERGE2-0">GE</label>
-                      </li>
-                      <li class="line"></li>
-                      <li>
-                        <input type="radio" value="English" name="MMERGE2" id="mce-MMERGE2-1">
-                        <label for="mce-MMERGE2-1">EN</label>
-                      </li>
-                    </ul>
+                    <input type="hidden" value="Georgian" name="MMERGE2">
                     <div class="subscribe-submit">
                       <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="ელექტრონული ფოსტა">
                       <div class="line"></div>
