Fixes and add ug logo

--- a/ka/index.html
+++ b/ka/index.html
@@ -33,10 +33,7 @@
       <div class="content">
         <main>
           <div class="circle" data-id="1"></div>
-          <div class="corner">
-            <div class="source">ფოტოები: საქართველოს<br /> ეროვნული არქივი</div>
-            <a class="language" href="../en">ENGLISH</a>
-          </div>
+          <a class="language hidden" href="../en" data-id="12">ENGLISH</a>
           <h1 class="gradient hidden shift" data-id="3"><b>უკან მომავალში: 1918</b></h1>
           <a class="vizhack2017 hidden" href="https://vizhack.ge/2017/ka/" data-id="2" target="_blank">წინა <br />გამოშვება</a>
           <div class="hline" data-id="4"></div>
@@ -88,6 +85,7 @@
             </div>
           </div>
           <div class="hline" data-id="9"></div>
+          <div class="source">ფოტოები: საქართველოს ეროვნული არქივი</div>
         </main>
         <footer>
           <ul class="hidden shift" data-id="10">
@@ -101,7 +99,10 @@
             </li>
             <li>
               <label>მხარდამჭერი</label>
-              <a href="http://www.sovlab.ge/ka/" target="_blank" class="sovlab"><img src="../assets/images/sovlab.svg" width="69" height="33"></a>
+              <div class="items">
+                <a href="http://www.sovlab.ge/ka/" target="_blank" class="sovlab"><img src="../assets/images/sovlab.svg" width="69" height="33"></a>
+                <a href="https://www.ug.edu.ge/" target="_blank" class="ug"><img src="../assets/images/ug.png" width="60" height="60"></a>
+              </div>
             </li>
           </ul>
           <a class="vizhack2017 hidden shift" href="https://vizhack.ge/2017" data-id="11">წინა გამოშვება</a>
