--- a/en/index.html
+++ b/en/index.html
@@ -33,12 +33,9 @@
       <div class="content">
         <main>
           <div class="circle" data-id="1"></div>
-          <div class="corner">
-            <div class="source">Photos: The National <br />Archive of Georgia</div>
-            <a class="language" href="../ka">ქართული</a>
-          </div>
+          <a class="language hidden" href="../ka" data-id="12">ქართული</a>
           <h1 class="gradient hidden shift" data-id="3"><b>Back to the Future: 1918</b></h1>
-          <a class="vizhack2017 hidden" href="https://vizhack.ge/2017/ka/" data-id="2" target="_blank">Past <br />Edition</a>
+          <a class="vizhack2017 hidden" href="https://vizhack.ge/2017/ka/" data-id="2" target="_blank">Past Edition</a>
           <div class="hline" data-id="4"></div>
           <div class="row">
             <div class="space">
@@ -89,6 +86,7 @@
             </div>
           </div>
           <div class="hline" data-id="9"></div>
+          <div class="source">Photos: The National Archive of Georgia</div>
         </main>
         <footer>
           <ul class="hidden shift" data-id="10">
@@ -102,7 +100,10 @@
             </li>
             <li>
               <label>SUPPORTER</label>
-              <a href="http://www.sovlab.ge/en/" target="_blank" class="sovlab"><img src="../assets/images/sovlab.svg" width="69" height="33"></a>
+              <div class="items">
+                <a href="http://www.sovlab.ge/en/" target="_blank" class="sovlab"><img src="../assets/images/sovlab.svg" width="69" height="33"></a>
+                <a href="https://www.ug.edu.ge/langswitch/switchLanguage/eng" target="_blank" class="ug"><img src="../assets/images/ug.png" width="60" height="60"></a>
+              </div>
             </li>
           </ul>
           <a class="vizhack2017 hidden shift" href="https://vizhack.ge/2017" data-id="11">Past <br />Edition</a>
