Registration shifted to 20 may, analytics turn on

--- a/en/index.html
+++ b/en/index.html
@@ -7,8 +7,8 @@
     <title>VizHack</title>
 
     <meta property="og:title" content="VizHack">
-    <meta property="og:description" content="If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the Data Visualization Hackathon - Back to the Future: 1918. Registration is open until May 10th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on June 9-10 in Technopark. Let's bring history to life using technologies, data and design!"/>
-    <meta name="description" content="If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the Data Visualization Hackathon - Back to the Future: 1918. Registration is open until May 10th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on June 9-10 in Technopark. Let's bring history to life using technologies, data and design!">
+    <meta property="og:description" content="If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the Data Visualization Hackathon - Back to the Future: 1918. Registration is open until May 20th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on June 9-10 in Technopark. Let's bring history to life using technologies, data and design!"/>
+    <meta name="description" content="If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the Data Visualization Hackathon - Back to the Future: 1918. Registration is open until May 20th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on June 9-10 in Technopark. Let's bring history to life using technologies, data and design!">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vizhack.ge/en/" />
     <meta property="og:site_name" content="VizHack" />
@@ -47,7 +47,7 @@
                   If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the Data Visualization Hackathon - <b>Back to the Future: 1918.</b>
                 </p>
                 <p>
-                  Registration is open until May 10th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on <b>June 9-10 in Technopark</b>.
+                  Registration is open until May 20th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on <b>June 9-10 in Technopark</b>.
                   Let's bring history to life using technologies, data and design!
                 </p>
               </section>
@@ -112,13 +112,13 @@
     </div>
     <script src="../assets/js/current-device.min.js"></script>
     <script type="text/javascript" src="../assets/js/main.js"></script>
-    <!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100354106-9"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-100354106-9"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'UA-100354106-9');
-    </script>-->
+    </script>
   </body>
 </html>
