--- a/ka/index.html
+++ b/ka/index.html
@@ -47,7 +47,7 @@
                   თუ ხარ დიზაინერი, პროგრამისტი, კომუნიკაციის სპეციალისტი, ისტორიის მკვლევარი, ჟურნალისტი ან სტატისტიკოსი და გაინტერესებს მონაცემებთან მუშაობა, შემოუერთდი მონაცემთა ვიზუალიზაციის ჰაკათონს - <b>უკან მომავალში 1918!</b>
                 </p>
                 <p>
-                  დარეგისტრირდი ჰაკათონზე 10 მაისამდე, შერჩეული გუნდები <b>9-10 ივნისს ტექნოპარკში</b> იმუშავებენ ისტორიულ მონაცემებზე, რომელიც მოიცავს 1918 წლიდან დღემდე პერიოდს. ერთად გავაცოცხლოთ ისტორია თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!
+                  დარეგისტრირდი ჰაკათონზე 20 მაისამდე, შერჩეული გუნდები <b>9-10 ივნისს ტექნოპარკში</b> იმუშავებენ ისტორიულ მონაცემებზე, რომელიც მოიცავს 1918 წლიდან დღემდე პერიოდს. ერთად გავაცოცხლოთ ისტორია თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!
                 </p>
               </section>
               <a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLSceHWlqzMKz3bwsh08E-jG9D_3okWnYSqWzMMpnyPbNXEupIw/viewform&sa=D&source=hangouts&ust=1523525767698000&usg=AFQjCNGkaeLG-YsuZgJx29GpK-znFRl5fg" class="register gradient hidden shift" data-id="7">დარეგისტრირდი</a>
@@ -111,13 +111,13 @@
     </div>
     <script src="../assets/js/current-device.min.js"></script>
     <script type="text/javascript" src="../assets/js/main.js"></script>
-    <!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100354106-9"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-100354106-9"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'UA-100354106-9');
-    </script>-->
+    </script>
   </body>
 </html>
