Update text and remove registration button

--- a/ka/index.html
+++ b/ka/index.html
@@ -44,13 +44,12 @@
             <div class="flex">
               <section class="hidden shift" data-id="6">
                 <p>
-                  თუ ხარ დიზაინერი, პროგრამისტი, კომუნიკაციის სპეციალისტი, ისტორიის მკვლევარი, ჟურნალისტი ან სტატისტიკოსი და გაინტერესებს მონაცემებთან მუშაობა, შემოუერთდი მონაცემთა ვიზუალიზაციის ჰაკათონს - <b>უკან მომავალში 1918!</b>
+                  9-10 ივნისს ტექნოპარკი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში: 1918-ს მასპინძლობს. ჰაკათონის ფარგლებში, მონაცემებით დაინტერესებული ადამიანები, დიზაინერები, პროგრამისტები, კომუნიკაციის სპეციალისტები, ისტორიის მკვლევრები და  ჟურნალისტები შეიკრიბებიან. ისინი გასული 100 წლის ისტორიულ მონაცემების გამოყენებითისტორიას გააცოცხლებენ.
                 </p>
                 <p>
-                  დარეგისტრირდი ჰაკათონზე 20 მაისამდე, შერჩეული გუნდები <b>9-10 ივნისს ტექნოპარკში</b> იმუშავებენ ისტორიულ მონაცემებზე, რომელიც მოიცავს 1918 წლიდან დღემდე პერიოდს. ერთად გავაცოცხლოთ ისტორია თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!
+                  მონაცემთა ვიზუალიზაციის ჰაკათონი წელს უკვე მეორედ ტარდება და მონაწილეებს საშუალებას აძლევს, გაიღრმავონ ცოდნა მონაცემების სფეროში, გაეცნონ თანამედროვე ტექნოლოგიებს, შეხვდნენ ამ თემებით დაინტერესებულ სხვა ადამიანებს და გამოცდილი მენტორების დახმარებით, თავად შექმნან სხვადასხვა სახის ციფრული ხელსაწყო.
                 </p>
               </section>
-              <a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLSceHWlqzMKz3bwsh08E-jG9D_3okWnYSqWzMMpnyPbNXEupIw/viewform&sa=D&source=hangouts&ust=1523525767698000&usg=AFQjCNGkaeLG-YsuZgJx29GpK-znFRl5fg" class="register gradient hidden shift" data-id="7">დარეგისტრირდი</a>
               <div class="subscribe hidden shift" data-id="8">
                 <label>სიახლეების გამოწერა</label>
 
