--- a/en/index.html
+++ b/en/index.html
@@ -7,8 +7,8 @@
     <title>VizHack</title>
 
     <meta property="og:title" content="VizHack">
-    <meta property="og:description" content="If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the Data Visualization Hackathon - Back to the Future: 1918. Registration is open until May 20th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on June 9-10 in Technopark. Let's bring history to life using technologies, data and design!"/>
-    <meta name="description" content="If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the Data Visualization Hackathon - Back to the Future: 1918. Registration is open until May 20th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on June 9-10 in Technopark. Let's bring history to life using technologies, data and design!">
+    <meta property="og:description" content="თუ ხარ დიზაინერი, პროგრამისტი, კომუნიკაციის სპეციალისტი, ისტორიის მკვლევარი, ჟურნალისტი ან სტატისტიკოსი და გაინტერესებს მონაცემებთან მუშაობა, შემოუერთდი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში 1918! დარეგისტრირდით ჰაკათონზე და გუნდთან ერთად იმუშავეთ ისტორიულ მონაცემებზე, რომელიც მოიცავს 1918 წლიდან დღემდე პერიოდს. გააცოცხლე ისტორია თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!"/>
+    <meta name="description" content="თუ ხარ დიზაინერი, პროგრამისტი, კომუნიკაციის სპეციალისტი, ისტორიის მკვლევარი, ჟურნალისტი ან სტატისტიკოსი და გაინტერესებს მონაცემებთან მუშაობა, შემოუერთდი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში 1918! დარეგისტრირდით ჰაკათონზე და გუნდთან ერთად იმუშავეთ ისტორიულ მონაცემებზე, რომელიც მოიცავს 1918 წლიდან დღემდე პერიოდს. გააცოცხლე ისტორია თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vizhack.ge/en/" />
     <meta property="og:site_name" content="VizHack" />
@@ -44,14 +44,12 @@
             <div class="flex">
               <section class="hidden shift" data-id="6">
                 <p>
-                  If you are a designer, programmer, communications specialist, history researcher, journalist or statistician and are interested in working with data, join the Data Visualization Hackathon - <b>Back to the Future: 1918.</b>
+                  9-10 ივნისს ტექნოპარკი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში: 1918-ს მასპინძლობს. ჰაკათონის ფარგლებში, მონაცემებით დაინტერესებული ადამიანები, დიზაინერები, პროგრამისტები, კომუნიკაციის სპეციალისტები, ისტორიის მკვლევრები და  ჟურნალისტები შეიკრიბებიან. ისინი გასული 100 წლის ისტორიულ მონაცემების გამოყენებითისტორიას გააცოცხლებენ.
                 </p>
                 <p>
-                  Registration is open until May 20th. Selected teams will work on historic data from the last 100 years. The hackathon will take place on <b>June 9-10 in Technopark</b>.
-                  Let's bring history to life using technologies, data and design!
+                  მონაცემთა ვიზუალიზაციის ჰაკათონი წელს უკვე მეორედ ტარდება და მონაწილეებს საშუალებას აძლევს, გაიღრმავონ ცოდნა მონაცემების სფეროში, გაეცნონ თანამედროვე ტექნოლოგიებს, შეხვდნენ ამ თემებით დაინტერესებულ სხვა ადამიანებს და გამოცდილი მენტორების დახმარებით, თავად შექმნან სხვადასხვა სახის ციფრული ხელსაწყო.
                 </p>
               </section>
-              <a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLSceHWlqzMKz3bwsh08E-jG9D_3okWnYSqWzMMpnyPbNXEupIw/viewform&sa=D&source=hangouts&ust=1523525767698000&usg=AFQjCNGkaeLG-YsuZgJx29GpK-znFRl5fg" class="register gradient hidden shift" data-id="7">REGISTER NOW</a>
               <div class="subscribe hidden shift" data-id="8">
                 <label>SIGN UP FOR OUR NEWSLETTER</label>
 
