--- a/ka/index.html
+++ b/ka/index.html
@@ -7,8 +7,8 @@
     <title>VizHack</title>
 
     <meta property="og:title" content="VizHack">
-    <meta property="og:description" content="თუ ხარ დიზაინერი, პროგრამისტი, კომუნიკაციის სპეციალისტი, ისტორიის მკვლევარი, ჟურნალისტი ან სტატისტიკოსი და გაინტერესებს მონაცემებთან მუშაობა, შემოუერთდი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში 1918! დარეგისტრირდით ჰაკათონზე და გუნდთან ერთად იმუშავეთ ისტორიულ მონაცემებზე, რომელიც მოიცავს 1918 წლიდან დღემდე პერიოდს. გააცოცხლე ისტორია თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!"/>
-    <meta name="description" content="თუ ხარ დიზაინერი, პროგრამისტი, კომუნიკაციის სპეციალისტი, ისტორიის მკვლევარი, ჟურნალისტი ან სტატისტიკოსი და გაინტერესებს მონაცემებთან მუშაობა, შემოუერთდი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში 1918! დარეგისტრირდით ჰაკათონზე და გუნდთან ერთად იმუშავეთ ისტორიულ მონაცემებზე, რომელიც მოიცავს 1918 წლიდან დღემდე პერიოდს. გააცოცხლე ისტორია თანამედროვე ტექნოლოგიებისა და დიზაინის გამოყენებით!">
+    <meta property="og:description" content="9-10 ივნისს ტექნოპარკი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში: 1918-ს მასპინძლობს. ჰაკათონის ფარგლებში, მონაცემებით დაინტერესებული ადამიანები, დიზაინერები, პროგრამისტები, კომუნიკაციის სპეციალისტები, ისტორიის მკვლევრები და  ჟურნალისტები შეიკრიბებიან. ისინი გასული 100 წლის ისტორიულ მონაცემების გამოყენებითისტორიას გააცოცხლებენ. მონაცემთა ვიზუალიზაციის ჰაკათონი წელს უკვე მეორედ ტარდება და მონაწილეებს საშუალებას აძლევს, გაიღრმავონ ცოდნა მონაცემების სფეროში, გაეცნონ თანამედროვე ტექნოლოგიებს, შეხვდნენ ამ თემებით დაინტერესებულ სხვა ადამიანებს და გამოცდილი მენტორების დახმარებით, თავად შექმნან სხვადასხვა სახის ციფრული ხელსაწყო."/>
+    <meta name="description" content="9-10 ივნისს ტექნოპარკი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში: 1918-ს მასპინძლობს. ჰაკათონის ფარგლებში, მონაცემებით დაინტერესებული ადამიანები, დიზაინერები, პროგრამისტები, კომუნიკაციის სპეციალისტები, ისტორიის მკვლევრები და  ჟურნალისტები შეიკრიბებიან. ისინი გასული 100 წლის ისტორიულ მონაცემების გამოყენებითისტორიას გააცოცხლებენ. მონაცემთა ვიზუალიზაციის ჰაკათონი წელს უკვე მეორედ ტარდება და მონაწილეებს საშუალებას აძლევს, გაიღრმავონ ცოდნა მონაცემების სფეროში, გაეცნონ თანამედროვე ტექნოლოგიებს, შეხვდნენ ამ თემებით დაინტერესებულ სხვა ადამიანებს და გამოცდილი მენტორების დახმარებით, თავად შექმნან სხვადასხვა სახის ციფრული ხელსაწყო.">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vizhack.ge/ka/" />
     <meta property="og:site_name" content="VizHack" />
@@ -44,12 +44,13 @@
             <div class="flex">
               <section class="hidden shift" data-id="6">
                 <p>
-                  9-10 ივნისს ტექნოპარკი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში: 1918-ს მასპინძლობს. ჰაკათონის ფარგლებში, მონაცემებით დაინტერესებული ადამიანები, დიზაინერები, პროგრამისტები, კომუნიკაციის სპეციალისტები, ისტორიის მკვლევრები და  ჟურნალისტები შეიკრიბებიან. ისინი გასული 100 წლის ისტორიულ მონაცემების გამოყენებითისტორიას გააცოცხლებენ.
+                  <b>9-10 ივნისს</b> ტექნოპარკი მონაცემთა ვიზუალიზაციის ჰაკათონს - <b>უკან მომავალში: 1918-ს</b> მასპინძლობს. ჰაკათონის ფარგლებში, მონაცემებით დაინტერესებული ადამიანები, დიზაინერები, პროგრამისტები, კომუნიკაციის სპეციალისტები, ისტორიის მკვლევრები და  ჟურნალისტები შეიკრიბებიან. ისინი გასული 100 წლის ისტორიულ მონაცემების გამოყენებითისტორიას გააცოცხლებენ.
                 </p>
                 <p>
                   მონაცემთა ვიზუალიზაციის ჰაკათონი წელს უკვე მეორედ ტარდება და მონაწილეებს საშუალებას აძლევს, გაიღრმავონ ცოდნა მონაცემების სფეროში, გაეცნონ თანამედროვე ტექნოლოგიებს, შეხვდნენ ამ თემებით დაინტერესებულ სხვა ადამიანებს და გამოცდილი მენტორების დახმარებით, თავად შექმნან სხვადასხვა სახის ციფრული ხელსაწყო.
                 </p>
               </section>
+              <a href="https://www.google.com/url?q=https://drive.google.com/drive/folders/1TxPvxV7qa4v04OYnXs3NebIX8ThoMrwR?usp%3Dsharing&sa=D&source=hangouts&ust=1527057368667000&usg=AFQjCNGHYIUo3rGzTy37EV_RUqjVSMGifw" class="register gradient hidden shift" data-id="7">მონაცემები</a>
               <div class="subscribe hidden shift" data-id="8">
                 <label>სიახლეების გამოწერა</label>
 
@@ -94,13 +95,16 @@
             </li>
             <li>
               <label>პარტნიორი</label>
-              <a href="https://ge.usembassy.gov/" target="_blank"><img src="../assets/images/us_embassy.png" width="60" height="60"></a>
+              <div class="items">
+                <a href="https://ge.usembassy.gov/" target="_blank"><img src="../assets/images/us_embassy.png" width="50" height="50"></a>
+                <a href="http://www.tbilisi.gov.ge/" target="_blank"><img src="../assets/images/city_hall.png" width="50" height="50"></a>
+              </div>
             </li>
             <li>
               <label>მხარდამჭერი</label>
               <div class="items">
                 <a href="http://www.sovlab.ge/ka/" target="_blank" class="sovlab"><img src="../assets/images/sovlab.svg" width="69" height="33"></a>
-                <a href="https://www.ug.edu.ge/" target="_blank" class="ug"><img src="../assets/images/ug.png" width="60" height="60"></a>
+                <a href="https://www.ug.edu.ge/" target="_blank" class="ug"><img src="../assets/images/ug.png" width="50" height="50"></a>
               </div>
             </li>
           </ul>
