--- a/en/index.html
+++ b/en/index.html
@@ -50,37 +50,10 @@
                   This is the second edition of the Data Visualization Hackathon, which enables participants to create different kinds of digital tools, increase their knowledge in the field of data communication, get acquainted with modern technologies, meet people who are also interested in these topics and work with experienced mentors to develop your products.
                 </p>
               </section>
-              <a href="https://www.google.com/url?q=https://drive.google.com/drive/folders/1TxPvxV7qa4v04OYnXs3NebIX8ThoMrwR?usp%3Dsharing&sa=D&source=hangouts&ust=1527057368667000&usg=AFQjCNGHYIUo3rGzTy37EV_RUqjVSMGifw" class="register gradient hidden shift" data-id="7">DATA</a>
-              <div class="subscribe hidden shift" data-id="8">
-                <label>SIGN UP FOR OUR NEWSLETTER</label>
-
-
-                <!-- Begin MailChimp Signup Form -->
-                <div id="mc_embed_signup">
-                  <form action="https://twitter.us16.list-manage.com/subscribe/post?u=4c5461b661acbc0f12e0cc253&amp;id=ec174eaaa1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                    <div id="mc_embed_signup_scroll">
-
-                  <div class="subscribe-row">
-                    <input type="hidden" value="English" name="MMERGE2">
-                    <div class="subscribe-submit">
-                      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="E-mail">
-                      <div class="line"></div>
-                      <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-                    </div>
-                  </div>
-
-
-                    <div id="mce-responses" class="clear">
-                      <div class="response" id="mce-error-response" style="display:none"></div>
-                      <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4c5461b661acbc0f12e0cc253_ec174eaaa1" tabindex="-1" value=""></div>
-                      </div>
-                  </form>
-                </div>
-
-                <!--End mc_embed_signup-->
-
+              <a href="https://www.google.com/url?q=https://drive.google.com/drive/folders/1TxPvxV7qa4v04OYnXs3NebIX8ThoMrwR?usp%3Dsharing&sa=D&source=hangouts&ust=1527057368667000&usg=AFQjCNGHYIUo3rGzTy37EV_RUqjVSMGifw" class="data gradient hidden shift" data-id="7">DATA</a>
+              <div class="register hidden shift" data-id="8">
+                <label>The deadline to register your team is June 1st</label>
+                <a href="https://goo.gl/forms/qBVZUw6CJ8oss6PJ3">Register</a>
               </div>
             </div>
           </div>
