--- a/ka/index.html
+++ b/ka/index.html
@@ -50,37 +50,10 @@
                   მონაცემთა ვიზუალიზაციის ჰაკათონი წელს უკვე მეორედ ტარდება და მონაწილეებს საშუალებას აძლევს, გაიღრმავონ ცოდნა მონაცემების სფეროში, გაეცნონ თანამედროვე ტექნოლოგიებს, შეხვდნენ ამ თემებით დაინტერესებულ სხვა ადამიანებს და გამოცდილი მენტორების დახმარებით, თავად შექმნან სხვადასხვა სახის ციფრული ხელსაწყო.
                 </p>
               </section>
-              <a href="https://www.google.com/url?q=https://drive.google.com/drive/folders/1TxPvxV7qa4v04OYnXs3NebIX8ThoMrwR?usp%3Dsharing&sa=D&source=hangouts&ust=1527057368667000&usg=AFQjCNGHYIUo3rGzTy37EV_RUqjVSMGifw" class="register gradient hidden shift" data-id="7">მონაცემები</a>
-              <div class="subscribe hidden shift" data-id="8">
-                <label>სიახლეების გამოწერა</label>
-
-
-                <!-- Begin MailChimp Signup Form -->
-                <div id="mc_embed_signup">
-                  <form action="https://twitter.us16.list-manage.com/subscribe/post?u=4c5461b661acbc0f12e0cc253&amp;id=ec174eaaa1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                    <div id="mc_embed_signup_scroll">
-
-                  <div class="subscribe-row">
-                    <input type="hidden" value="Georgian" name="MMERGE2">
-                    <div class="subscribe-submit">
-                      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="ელექტრონული ფოსტა">
-                      <div class="line"></div>
-                      <input type="submit" value="გამოწერა" name="subscribe" id="mc-embedded-subscribe" class="button">
-                    </div>
-                  </div>
-
-
-                    <div id="mce-responses" class="clear">
-                      <div class="response" id="mce-error-response" style="display:none"></div>
-                      <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4c5461b661acbc0f12e0cc253_ec174eaaa1" tabindex="-1" value=""></div>
-                      </div>
-                  </form>
-                </div>
-
-                <!--End mc_embed_signup-->
-
+              <a href="https://www.google.com/url?q=https://drive.google.com/drive/folders/1TxPvxV7qa4v04OYnXs3NebIX8ThoMrwR?usp%3Dsharing&sa=D&source=hangouts&ust=1527057368667000&usg=AFQjCNGHYIUo3rGzTy37EV_RUqjVSMGifw" class="data gradient hidden shift" data-id="7">მონაცემები</a>
+              <div class="register hidden shift" data-id="8">
+                <label>დაარეგისტრირეთ გუნდი 1 ივნისამდე</label>
+                <a href="https://goo.gl/forms/qBVZUw6CJ8oss6PJ3">რეგისტრაცია</a>
               </div>
             </div>
           </div>
