Add impact hub to supporters

--- a/en/index.html
+++ b/en/index.html
@@ -78,6 +78,7 @@
               <div class="items">
                 <a href="http://www.sovlab.ge/en/" target="_blank" class="sovlab"><img src="../assets/images/sovlab.svg" width="69" height="33"></a>
                 <a href="https://www.ug.edu.ge/langswitch/switchLanguage/eng" target="_blank" class="ug"><img src="../assets/images/ug.png" width="50" height="50"></a>
+                <a href="https://tbilisi.impacthub.net/" target="_blank"><img src="../assets/images/impact_hub.jpg" width="50" height="50"></a>
               </div>
             </li>
           </ul>
