Add gita logo to partner list

--- a/en/index.html
+++ b/en/index.html
@@ -71,6 +71,7 @@
               <div class="items">
                 <a href="https://ge.usembassy.gov/" target="_blank"><img src="../assets/images/us_embassy.png" width="50" height="50"></a>
                 <a href="http://www.tbilisi.gov.ge/?lang=en" target="_blank"><img src="../assets/images/city_hall.png" width="50" height="50"></a>
+                <a href="https://gita.gov.ge/" target="_blank"><img src="../assets/images/gita_en.svg" width="50" height="50"></a>
               </div>
             </li>
             <li>
